--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -42,7 +42,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-color: rgb(0, 0, 0, 0.1);
+    background-color: rgb(0, 0, 0, 0);
+    /* backdrop-filter: blur(2px); */
     z-index: 1;
 }
 
